added component search

--- a/client/styles/StepWrapper.module.scss
+++ b/client/styles/StepWrapper.module.scss
@@ -1,8 +1,9 @@
 .box {
-    margin: 70px 0;
-    height: 270px;
+  margin: 70px 0;
+  height: 270px;
 
-    .card {
-        width: 600px;        
-    }
+  .card {
+    width: 30vw;
+    max-height: 30vw;
+  }
 }
