--- a/client/styles/TrackForm.module.scss
+++ b/client/styles/TrackForm.module.scss
@@ -1,7 +1,10 @@
 .box {
-    padding: 20px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  height: 100%;
 
-    & > * {
-        margin-bottom: 10px;
-    }
+  & > * {
+    margin-bottom: 10px;
+  }
 }
